# django-postfix-admin

./: .env.example  .gitignore  Pipfile  pyproject.toml
config/: urls.py  wsgi.py
config/settings/: base.py  dev.py  production.py
mail/: admin.py  forms.py  mixins.py  models.py  utils.py  views.py
mail/migrations/: 0001_initial.py  0002_auto_20190213_1827.py
mail/templates/admin/mail/mailbox/: change_form.html
mail/templates/mail/: index.html
